--- a/application/flask_math/templates/layout.html
+++ b/application/flask_math/templates/layout.html
@@ -88,7 +88,7 @@
     <!-- フッター -->      
     <footer class="footer"> 
       <ul class="footer_ul">        
-        <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>トップページ</small></a></li>
+        <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>トップページ</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('Math.integral_view',dimension='2D')}}"><small>積分</small>
         <a style="display: block;" class="heading" href="{{ url_for('Math.derivative_view') }}"><small>微分</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('Math.lim_view') }}"><small>極限</small></a>
