--- a/application/main/static_main/css/style.css
+++ b/application/main/static_main/css/style.css
@@ -22,3 +22,20 @@
   text-decoration: none;
 }
 
+.center {
+  text-align: center;
+}
+
+/* footer */
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.footer {
+  margin-top: auto;
+  background-color: darkgray;
+  padding: 15px 0;
+}
+
