--- a/application/flask_math/templates/layout.html
+++ b/application/flask_math/templates/layout.html
@@ -21,73 +21,73 @@
   {% endblock%}
 </head>
 
-<body>     
+<body>
   <div class="wrapper">
-    <div class="container-fluid">
-      <!-- ナビゲーションバー -->
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-        <a class="navbar-brand" href="{{url_for('Math.index_view')}}">Flask Math</a>
-        <div class="collapse navbar-collapse justify-content-end">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://github.com/kouki7910/Flask-Math" target="_blank">
-                <img src="static/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="{{ url_for('main.index_view')}}">トップページ</a>
-                <a class="dropdown-item" href="{{ url_for('Math.integral_view',dimension='2D')}}">積分</a>
-                <a class="dropdown-item" href="{{ url_for('Math.derivative_view') }}">微分</a>
-                <a class="dropdown-item" href="{{ url_for('Math.lim_view') }}">極限</a>
-                <a class="dropdown-item" href="{{ url_for('Math.matrix_view') }}">行列</a>
-                <a class="dropdown-item" href="{{ url_for('Math.matrix_2_view') }}">行列の演算</a>
-                <a class="dropdown-item" href="{{ url_for('Math.equation_view') }}">方程式</a>
-                <a class="dropdown-item" href="{{ url_for('Math.equations_view',number=1)}}">連立方程式</a>
-                <a class="dropdown-item" href="{{ url_for('Math.diff_equation_view') }}">微分方程式</a>
-                <a class="dropdown-item" href="{{ url_for('Math.Expand_view') }}">展開</a>
-                <a class="dropdown-item" href="{{ url_for('Math.factorization_view') }}">因数分解</a>
-                <a class="dropdown-item" href="{{ url_for('Math.prime_factorization_view') }}">素因数分解</a>
-                <a class="dropdown-item" href="{{ url_for('Math.max_min_view') }}">極大値極小値</a>
-                <a class="dropdown-item" href="{{ url_for('Math.base_conversion_view') }}">進数変換</a>
-                <a class="dropdown-item" href="{{ url_for('Math.Apart_view') }}">部分分数分解</a>
-                <a class="dropdown-item" href="{{ url_for('Math.taylor_view') }}">テイラー展開</a>
-                <a class="dropdown-item" href="{{ url_for('Math.newton_method_view') }}">ニュートン法</a>
-                <a class="dropdown-item" href="{{ url_for('Math.Sieve_of_Eratosthenes_view') }}">ソクラテスのふるい</a>
-                <a class="dropdown-item" href="{{ url_for('Math.Euclidean_Algorithm_view') }}">ユークリッドの互除法</a>
-                <a class="dropdown-item" href="{{ url_for('Math.graph_view') }}">グラフ</a>
-                <a class="dropdown-item" href="{{ url_for('Math.Factorial_view') }}">階乗</a>
-                <a class="dropdown-item" href="{{ url_for('Math.latex_view',input_type='python') }}">\(\LaTeX\)</a>
-                <a class="dropdown-item" href="{{ url_for('Math.BMI_view') }}">BMI</a>
-                <a class="dropdown-item" href="{{ url_for('Math.instructions_view') }}">入力上の注意</a>
-              </div>
-            </li>
-          </ul>
+    <!-- ナビゲーションバー -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+      <a class="navbar-brand" href="{{url_for('Math.index_view')}}">Flask Math</a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/kouki7910/Flask-Math" target="_blank">
+            <img src="static/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
+          </a>
+        </li>
+        <div class="collapse navbar-collapse">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{{ url_for('main.index_view')}}">トップページ</a>
+              <a class="dropdown-item" href="{{ url_for('Math.integral_view',dimension='2D')}}">積分</a>
+              <a class="dropdown-item" href="{{ url_for('Math.derivative_view') }}">微分</a>
+              <a class="dropdown-item" href="{{ url_for('Math.lim_view') }}">極限</a>
+              <a class="dropdown-item" href="{{ url_for('Math.matrix_view') }}">行列</a>
+              <a class="dropdown-item" href="{{ url_for('Math.matrix_2_view') }}">行列の演算</a>
+              <a class="dropdown-item" href="{{ url_for('Math.equation_view') }}">方程式</a>
+              <a class="dropdown-item" href="{{ url_for('Math.equations_view',number=1)}}">連立方程式</a>
+              <a class="dropdown-item" href="{{ url_for('Math.diff_equation_view') }}">微分方程式</a>
+              <a class="dropdown-item" href="{{ url_for('Math.Expand_view') }}">展開</a>
+              <a class="dropdown-item" href="{{ url_for('Math.factorization_view') }}">因数分解</a>
+              <a class="dropdown-item" href="{{ url_for('Math.prime_factorization_view') }}">素因数分解</a>
+              <a class="dropdown-item" href="{{ url_for('Math.max_min_view') }}">極大値極小値</a>
+              <a class="dropdown-item" href="{{ url_for('Math.base_conversion_view') }}">進数変換</a>
+              <a class="dropdown-item" href="{{ url_for('Math.Apart_view') }}">部分分数分解</a>
+              <a class="dropdown-item" href="{{ url_for('Math.taylor_view') }}">テイラー展開</a>
+              <a class="dropdown-item" href="{{ url_for('Math.newton_method_view') }}">ニュートン法</a>
+              <a class="dropdown-item" href="{{ url_for('Math.Sieve_of_Eratosthenes_view') }}">ソクラテスのふるい</a>
+              <a class="dropdown-item" href="{{ url_for('Math.Euclidean_Algorithm_view') }}">ユークリッドの互除法</a>
+              <a class="dropdown-item" href="{{ url_for('Math.graph_view') }}">グラフ</a>
+              <a class="dropdown-item" href="{{ url_for('Math.Factorial_view') }}">階乗</a>
+              <a class="dropdown-item" href="{{ url_for('Math.latex_view',input_type='python') }}">\(\LaTeX\)</a>
+              <a class="dropdown-item" href="{{ url_for('Math.BMI_view') }}">BMI</a>
+              <a class="dropdown-item" href="{{ url_for('Math.instructions_view') }}">入力上の注意</a>
+            </div>
+          </li>
         </div>
-      </nav>
-  
-      <!-- flash -->
-      {% for message in get_flashed_messages() %}
-      <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        {{message}}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% endfor %}
-  
-      <!--本文 -->
+      </ul>
+    </nav>
+
+    <!-- flash -->
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {{message}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endfor %}
+    
+    <!--本文 -->
+    <div class="container-fluid">
       <div class="blog-body">
         {% block body %}
-  
+    
         {% endblock%}
       </div>
     </div>
-    
-    <!-- フッター -->      
-    <footer class="footer"> 
-      <ul class="footer_ul">        
+
+    <!-- フッター -->
+    <footer class="footer">
+      <ul class="footer_ul">
         <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>トップページ</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('Math.integral_view',dimension='2D')}}"><small>積分</small>
         <a style="display: block;" class="heading" href="{{ url_for('Math.derivative_view') }}"><small>微分</small></a>
