--- a/application/flask_math/templates/layout.html
+++ b/application/flask_math/templates/layout.html
@@ -26,13 +26,8 @@
     <!-- ナビゲーションバー -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
       <a class="navbar-brand" href="{{url_for('Math.index_view')}}">Flask Math</a>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/kouki7910/Flask-Math" target="_blank">
-            <img src="static/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
-          </a>
-        </li>
-        <div class="collapse navbar-collapse">
+      <div class="collapse navbar-collapse justify-content-end">
+        <ul class="navbar-nav">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -62,7 +57,14 @@
               <a class="dropdown-item" href="{{ url_for('Math.instructions_view') }}">入力上の注意</a>
             </div>
           </li>
-        </div>
+        </ul>
+      </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/kouki7910/Flask-Math" target="_blank">
+            <img src="static/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
+          </a>
+        </li>
       </ul>
     </nav>
 
