--- a/application/flask_math/templates/layout.html
+++ b/application/flask_math/templates/layout.html
@@ -25,9 +25,19 @@
   <div class="wrapper">
     <!-- ナビゲーションバー -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="{{url_for('Math.index_view')}}">Flask Math</a>
-      <div class="collapse navbar-collapse justify-content-end">
-        <ul class="navbar-nav">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="navbar-brand" href="{{url_for('Math.index_view')}}">Flask Math</a>
+        </li>
+      </ul>
+    
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/kouki7910/Flask-Math" target="_blank">
+            <img src="static/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
+          </a>
+        </li>
+        <div class="collapse navbar-collapse" id="navbarNav">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -57,14 +67,7 @@
               <a class="dropdown-item" href="{{ url_for('Math.instructions_view') }}">入力上の注意</a>
             </div>
           </li>
-        </ul>
-      </div>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/kouki7910/Flask-Math" target="_blank">
-            <img src="static/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
-          </a>
-        </li>
+        </div>
       </ul>
     </nav>
 
