--- a/application/main/static_main/css/style.css
+++ b/application/main/static_main/css/style.css
@@ -9,12 +9,12 @@
 }
 
 .heading:link ,.heading:visited{
-  color: rgb(0,0,0);
+  color: #000000;
   text-decoration: none;
 }
 
 .heading:hover {
-  color: rgb(0,100,45);
+  color: #555555;
   text-decoration: none;
 }
 
@@ -25,6 +25,7 @@
 .center {
   text-align: center;
 }
+
 
 /* footer */
 .wrapper {
@@ -39,3 +40,12 @@
   padding: 15px 0;
 }
 
+.footer_ul{
+  column-count:6;
+}
+
+@media only screen and (max-device-width: 480px) {
+  .footer_ul{
+    column-count:2;
+  }
+}
