--- a/application/flask_math/static/css/style.css
+++ b/application/flask_math/static/css/style.css
@@ -72,3 +72,30 @@
     column-count:2;
   }
 }
+
+
+.radioArea input[type="radio"] {
+  width         : 13pt;        /* 大きさ：横 */
+  height        : 13pt;        /* 大きさ：縦 */
+  vertical-align: top;         /* 並び位置   */
+  display       : none;        /* チェックボックス非表示 */
+}
+ /* --- チェックボックス直後のlabel --- */
+.radioArea input[type="radio"] + label {
+  padding       : 0 4px;                      /* labelの余白 */
+  font-size     : 13pt;                       /* labelの文字サイズ */
+  font-weight   : bold;                       /* 文字太さ   */
+  border        : 2px solid rgba(255, 0, 0, 0.51); /* labelの枠線 */
+  border-radius : 5px;                        /* labelの角丸 */
+  background    : #ffffff;                    /* lebelの背景 */
+  cursor        : pointer;                    /* カーソル設定 */
+  transition    : .2s;                        /* なめらか変化 */
+}
+ /* --- 選択されたチェックボックス直後のlabel --- */
+.radioArea input[type="radio"]:checked + label {
+  background    : rgba(255, 0, 0, 0.51);                    /* lebelの背景 */
+}
+ /* --- 選択されていないチェックボックス直後のlabelにマウスが乗った --- */
+.radioArea input[type="radio"]:not(:checked) + label:hover {
+  background    : rgba(255, 0, 0, 0.40);     /* lebelの背景 */
+}
